# tauron_web_scraper

./: .gitignore  requirements.txt  setup.cfg
http_adapter/: ssl3_http_adapter.py
service/: tauron_scrape_service.py
soup/: html_parser.py
src/config/: env_enum.py
src/controller/: app.py  email_controller.py
src/data_model/: bill.py  email_data.py  user_data.py
src/http_adapter/: ssl3_http_adapter.py
src/scripts/: email_sender.py
src/service/: bill_service.py  email_service.py  tauron_scrape_service.py
src/session/: session.py
src/soup/: html_parser.py
src/util/: formatter.py  messages.py  singleton.py
tests/integration/: test_bill_service.py  test_tauron_service.py
tests/unit/tauron_service/: test_bill_service.py  test_tauron_service.py
util/: formatter.py  singleton.py
