[metadata]
name = tauron-scraper-renanrgs
version = 0.0.2
author = Renan Silva
author_email = renan.rgsilva@gmail.com
description = Tauron Web Scraper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/renanrgs/tauron_web_scraper
classifiers =
    Programming Language :: Python :: 3`
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10.4
install_requires =
    beautifulsoup4==4.11.1
    Flask==2.1.2
    requests==2.27.1
    urllib3==1.26.9
    yagmail==0.15.277
[options.packages.find]
where = src